# sphinxbase

./: .gitignore  AUTHORS  Android.mk  Application.mk  CMakeLists.txt  COPYING  ChangeLog  LICENSE  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  indent.sh  sphinxbase.dsw  sphinxbase.pc.in  sphinxbase.sln  sphinxbase.vcw
doc/: Makefile.am  doxy2swig.py  doxyfile.in  sphinx_cepview.1.in  sphinxbase.doxyfile
include/: Makefile.am  ad.h  agc.h  bio.h  bitvec.h  byteorder.h  case.h  ckd_alloc.h  clapack_lite.h  cmd_ln.h  cmn.h  cmn_prior.h  config.h.in  cont_ad.h  err.h  fe.h  feat.h  filename.h  fixpoint.h  fsg_model.h  gau_cb.h  gau_cb_float64.h  gau_cb_int32.h  gau_file.h  gau_mix.h  genrand.h  glist.h  hash_table.h  heap.h  huff_code.h  info.h  jsgf.h  libutil.h  linklist.h  listelem_alloc.h  logmath.h  matrix.h  misc.h  mmio.h  mulaw.h  (+16 more)
include/android/: config.h  sphinx_config.h
include/sphinxbase/: Makefile.am  ad.h  array_heap.h  bio.h  bitarr.h  bitvec.h  ckd_alloc.h  cmd_ln.h  cmn.h  err.h  fe.h  feat.h  filename.h  fixpoint.h  fsg_model.h  huff_code.h  jsgf.h  libutil.h  logmath.h  matrix.h  ngram_model.h  pio.h  sphinxbase_export.h  yin.h
include/win32/: config.h  sphinx_config.h
include/wince/: config.h  sphinx_config.h  string_wce.h
python/: Makefile.am  _sphinxbasemodule.c  sb_test.py  setup.py  setup.py.in  setup_win32.py  sphinxbase.c  sphinxbase.pxd  sphinxbase.pyx
python/sphinxbase/: __init__.py  lattice.py  ngram_model.py
src/libsphinxad/: CMakeLists.txt  Makefile.am  ad_alsa.c  ad_android.c  ad_base.c  ad_irix.c  ad_jack.c  ad_openal.c  ad_osf.c  ad_oss.c  ad_oss_bsd.c  ad_portaudio.c  ad_pulse.c  ad_s60.cpp  ad_sunos.c  audio_utils_sunos.c  audio_utils_sunos.h  cont_ad_base.c  mulaw_base.c  pa_convert.c  pa_host.h  pa_lib.c  pa_mac_core.c  pa_trace.c  pa_trace.h  pablio.c  pablio.h  play_win32.c  portaudio.h  rec_win32.c  ringbuffer.c  ringbuffer.h
src/libsphinxam/: Makefile.am  gau_cb.c  gau_cb_float64.c  gau_cb_int32.c  gau_file.c  gau_file.h  gau_mix.c  tasks.txt
src/libsphinxbase/fe/: CMakeLists.txt  Makefile.am  fe_interface.c  fe_internal.h  fe_noise.c  fe_prespch_buf.c  fe_sigproc.c  fe_warp.c  fe_warp.h  fe_warp_affine.c  fe_warp_inverse_linear.c  fe_warp_inverse_linear.h  fe_warp_piecewise_linear.c  fe_warp_piecewise_linear.h  fixlog.c  pitch.c  yin.c
src/libsphinxbase/lm/: CMakeLists.txt  Makefile.am  _jsgf_scanner.l  fsg_model.c  jsgf.c  jsgf_internal.h  jsgf_parser.c  jsgf_parser.h  jsgf_parser.y  jsgf_scanner.c  jsgf_scanner.h  lm3g_model.c  lm3g_model.h  lm3g_templates.c  lm_trie.c  lm_trie.h  lm_trie_quant.c  lm_trie_quant.h  ngram_model.c  ngram_model_arpa.c  ngram_model_arpa.h  ngram_model_dmp.c  ngram_model_dmp.h  ngram_model_dmp32.c  ngram_model_fst.c  ngram_model_htk.c  ngram_model_internal.h  ngram_model_lm3g.h  ngram_model_set.c  ngram_model_set.h  ngram_model_trie.c  ngram_model_trie.h  ngrams_raw.c  ngrams_raw.h
src/libsphinxbase/util/: CMakeLists.txt  Makefile.am  array_heap.c  bio.c  bitarr.c  bitvec.c  blas_lite.c  case.c  ckd_alloc.c  cmd_ln.c  dtoa.c  err.c  err_wince.c  errno.c  f2c_lite.c  filename.c  genrand.c  glist.c  hash_table.c  heap.c  huff_code.c  info.c  listelem_alloc.c  logmath.c  matrix.c  mmio.c  pio.c  priority_queue.c  profile.c  sbthread.c  slamch.c  strfuncs.c  unlimit.c
src/libsphinxfe/: Makefile.am  add-table.c  fe_interface.c  fe_internal.h  fe_sigproc.c  fe_warp.c  fe_warp.h  fe_warp_affine.c  fe_warp_affine.h  fe_warp_inverse_linear.c  fe_warp_inverse_linear.h  fe_warp_piecewise_linear.c  fe_warp_piecewise_linear.h  fixlog.c  make_log_table.py
src/libsphinxfeat/: Makefile.am  agc.c  cmn.c  cmn_prior.c  feat.c  lda.c
src/libsphinxutil/: Makefile.am  bio.c  bitvec.c  blas_lite.c  case.c  ckd_alloc.c  cmd_ln.c  err.c  err_wince.c  f2c_lite.c  filename.c  genrand.c  glist.c  hash.c  hash_table.c  heap.c  info.c  linklist.c  logmath.c  matrix.c  mmio.c  nextword.c  pio.c  profile.c  s3_arraylist.c  s3u_arraylist.c  slamch.c  slapack_lite.c  str2words.c  strfuncs.c  unlimit.c  wrapped_routines
src/sphinx_adtools/: CMakeLists.txt  Makefile.am  cont_adseg.c  cont_fileseg.c  cont_seg.c  sphinx_pitch.c
src/sphinx_fe/: CMakeLists.txt  Makefile.am  cmd_ln_defn.h  sphinx_fe.c  wave2feat.c  wave2feat.h
src/sphinx_jsgf2fsg/: CMakeLists.txt  Makefile  Makefile.am  jsgf.c  jsgf.h  jsgf.l  jsgf.y  jsgf_impl.c  jsgf_scanner.c  jsgf_scanner.h  jsgf_scanner.l  main.c  test1.gram  test10.gram  test2.gram  test3.gram  test4.gram  test5.gram  test6.gram  test7.gram  test8.gram  test9.gram
src/sphinx_lmtools/: CMakeLists.txt  Makefile.am  lm_eval.c  sphinx_lm_convert.c  sphinx_lm_eval.c
test/regression/: Makefile.am  chan3-dither.cepview  chan3-logspec.cepview  chan3-smoothspec.cepview  chan3.cepview  chan3.logspec  chan3.mfc  checkCompileStatus.sh  compare_table.pl  crontab  launchCompileCheck.sh  test-cepview.sh  test-cepview.sh.in  test-sphinx_fe-ctl.sh  test-sphinx_fe-dct.sh  test-sphinx_fe-dct.sh.in  test-sphinx_fe-dither-seed.sh  test-sphinx_fe-dither-seed.sh.in  test-sphinx_fe-logspec.sh  test-sphinx_fe-logspec.sh.in  test-sphinx_fe-logspec2cep.sh  test-sphinx_fe-logspec2cep.sh.in  test-sphinx_fe-smoothspec.sh  test-sphinx_fe-smoothspec.sh.in  test-sphinx_fe.sh  test-sphinx_fe.sh.in  test-sphinx_jsgf2fsg.sh  test-tutorial.sh  test.command.fsg  test.kleene.fsg  test.nestedRightRecursion.fsg  test.nulltest.fsg  test.rightRecursion.fsg  testfuncs.sh.in  tutorial-check.sh
test/unit/: CMakeLists.txt  Makefile.am
test/unit/test_ad/: Makefile.am  test_ad_copy.c  test_ad_read.c
test/unit/test_alloc/: CMakeLists.txt  Makefile.am  test_ckd_alloc_abort.sh  test_listelem_alloc.c
test/unit/test_bitvec/: Makefile.am  test_bitvec.c
test/unit/test_case/: Makefile.am  _lcase1.test  chgCase.c
test/unit/test_cmdln/: Makefile.am  _test_parse_badargs.res  _test_parse_badargs.test  _test_parse_defaults.res  _test_parse_defaults.test  _test_parse_defaults_r.res  _test_parse_multiple.res  cmdln_parse.c  cmdln_parse_multiple.c  cmdln_parse_r.c
test/unit/test_fe/: Makefile.am  (+2 more)
(+166 files in other folders)
