pkginclude_HEADERS =				\
	ad.h					\
	agc.h					\
	bio.h					\
	bitvec.h				\
	byteorder.h				\
	case.h					\
	ckd_alloc.h				\
	clapack_lite.h				\
	cmd_ln.h				\
	cmn.h					\
	cont_ad.h				\
	err.h					\
	f2c.h					\
	feat.h					\
	fe.h					\
	filename.h				\
	fixpoint.h				\
	fsg_model.h				\
	genrand.h				\
	glist.h					\
	hash_table.h				\
	heap.h					\
	info.h					\
	jsgf.h					\
	libutil.h				\
	listelem_alloc.h			\
	logmath.h				\
	matrix.h				\
	mmio.h                                  \
	mulaw.h					\
	ngram_model.h				\
	pio.h					\
	yin.h					\
	prim_type.h				\
	profile.h				\
	sbthread.h				\
	sphinx_config.h				\
	sphinxbase_export.h			\
	strfuncs.h				\
	unlimit.h

EXTRA_DIST = \
	wince/sphinx_config.h \
	wince/config.h \
	win32/sphinx_config.h \
	win32/config.h
