lib_LTLIBRARIES = libsphinxutil.la

libsphinxutil_la_LDFLAGS = -version-info 0:0:0

libsphinxutil_la_SOURCES = \
        bitvec.c \
	bio.c \
        case.c \
        ckd_alloc.c \
        cmd_ln.c \
        err.c \
        filename.c \
	genrand.c \
        glist.c \
        hash_table.c \
        heap.c \
        info.c \
        pio.c \
	linklist.c \
	nextword.c \
        profile.c \
        str2words.c \
	unlimit.c

INCLUDES = -I$(top_srcdir)/include \
           -I$(top_builddir)/include 

LIBOBJS = @LIBOBJS@
